# copyPasta

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lua-api.lua  lua-docs.md  main.cpp  mingw-toolchain.cmake  t.lua  temp.lua  test.lua
examples/: commentBlockInsideTupleTransformer.cpp  findDuplicateColumnsInHbmXml.cpp  findInFileExample.lua  findInstancesOfsetTupleTransformer.cpp  getTSQuery.cpp  staticCastHandling.cpp  staticCastHandling.lua  staticCastHandlingV2.cpp
include/: CacheAndPool.hpp  DirWalker.hpp  FileReaderWriter.hpp  LibGit.hpp  ListOfParsers.hpp  TSLoader.hpp  lib.hpp  loader.hpp  luaKitty.hpp
src/: CacheAndPool.cpp  FileReaderWriter.cpp  LibGit.cpp  LuaKitty.cpp  TSLoader.cpp
